--- a/templates/default/styles/main.css
+++ b/templates/default/styles/main.css
@@ -18,3 +18,16 @@ nav {
     top: 190px !important;
 }
 
+.navbar-brand img{
+    height: 40px !important;
+}
+
+doc {
+    align-content: center;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.sideaffix {
+    margin-top: 80px;
+}
