--- a/templates/default/partials/_head.liquid
+++ b/templates/default/partials/_head.liquid
@@ -3,12 +3,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   {%- if title and _appTitle -%}
-  <title>{{title}} | {{appTitle}}</title>
-  <meta name="title" content="{{title}} | {{appTitle}}">
+  <title>{{title}} | {{appTitle}} | Unosquare Open Source</title>
+  <meta name="title" content="{{title}} | {{appTitle}} | Unosquare Open Source">
   {%- else -%}
     {%- if title or _appTitle -%}
-  <title>{{title}}{{appTitle}}</title>
-  <meta name="title" content="{{title}}{{appTitle}}">
+  <title>{{title}}{{appTitle}} | Unosquare Open Source</title>
+  <meta name="title" content="{{title}}{{appTitle}} | Unosquare Open Source">
     {%- endif -%}
   {%- endif -%}
   <meta name="viewport" content="width=device-width">
