--- a/templates/default/layout/_master.tmpl
+++ b/templates/default/layout/_master.tmpl
@@ -19,11 +19,11 @@
         {{/_disableBreadcrumb}}
       </header>
       {{#_enableSearch}}
-      <div class="container body-content">
+      <div class="container-fluid body-content">
         {{>partials/searchResults}}
       </div>
       {{/_enableSearch}}
-      <div role="main" class="container body-content hide-when-search">
+      <div role="main" class="container-fluid body-content hide-when-search">
       {{^_disableToc}}
         {{>partials/toc}}
         <div class="article row grid-right">
